styles/style.css
/* ... */
#fieldset-gender label,
#fieldset-skills label {
    display: flex;
    align-items: center;
    gap: 8px;
    font-weight: bold;
    cursor: pointer;
}



#btn-submit {
    height: 55px;
    width: 100%;
    color: #222121;
    font-size: 1rem;
    font-weight: 400;
    margin-top: 30px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    transition: all 0.4s ease;
    background: rgba(146, 145, 145, 0.247);
}

#btn-reset {
    height: 55px;
    width: 100%;
    color: #fff;
    font-size: 1rem;
    font-weight: 400;
    margin-top: 30px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    transition: all 0.4s ease;
    background: rgba(255, 0, 0, 0.301);
}

#btn-submit:hover {
    background: #669d1b;
    color: #fff;
    font-weight: 600;
}

#btn-reset:hover {
    background: rgb(255, 0, 0);
    color: #fff;
    font-weight: 600;
}


#application_form input[type="radio"],
#application_form input[type="checkbox"] {
    width: auto;
    height: auto;
    display: inline;
    margin: 0;
    padding: 0;
}


@media screen and (max-width: 700px) {


    .navbar-apply {
        flex-direction: column;
        text-align: center;
        padding-block: 3rem;
    }

    .navbar-apply .main-menu ul {
        flex-direction: column;
        align-items: center;
        gap: 0.5rem;
    }

    .header__ul {
        flex-wrap: wrap;
        gap: 1rem;
        flex-direction: column;
        align-items: center;
    }

    .form-group {
        grid-template-columns: 1fr;
    }

}

/*** 6. APPLY LAYOUT END***/

/*** 7. JOBS LAYOUT ***/

.jobTitle {
    border: 3px solid #669d1b;
    background-color: #3b3b3b;
}


.jobSumaside {
    border: 3px solid #669d1b;
    border-radius: 25px;
    margin: 2em;
    padding: 1em;
    width: 25%;
    float: right;
}

.jobSumimg {
    border: 3px solid #669d1b;
    border-radius: 25px;
    height: auto;
    width: auto;
}

.jobSumtxt {
    padding: 2em;
    border: 3px solid #669d1b;
    border-radius: 25px;
}

.jobGeneraltxt {
    color: black
}

.jobGeneraltxt h3 h4 {
    text-align: left;
    padding-left: 20px;
}

.jobGeneraltxt ul {
    font-size: 0.9rem;
    line-height: 1.4;
    font-weight: normal;
    margin: 10px 0px 5px;
    text-align: left;
    list-style: disc;
    padding-left: 20px;
}

.jobGeneralbox {
    background-color: #ffff;
    border: 3px solid #669d1b;
    border-radius: 25px;
    width: fit-content;
    padding-bottom: 20px;
}

.job-grid-container {
    display: grid;
    gap: 5px;
    grid-template-columns: auto auto auto;
    padding: 10px;
    overflow: hidden;
}

.job-grid1 {
    grid-row-start: 1;
    grid-row-end: 2;

}

.job-grid2 {
    grid-row-start: 2;
    grid-row-end: 2;
}

.job-grid3 {
    grid-row-start: 1;
    grid-row-end: 2;

}

.job-grid4 {
    grid-row-start: 4;
    grid-row-end: 4;
    grid-column-start: 1;
    grid-column-end: 3;
}

.job-grid5 {
    grid-row-start: 2;
    grid-row-end: 2;

}

.job-grid6 {
    grid-row-start: 5;
    grid-row-end: 5;
    grid-column-start: 2;
}

/*** 7. JOBS LAYOUT END***/

